--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactive-router",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lukaszroman.tk/reactive-router/",
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
